# roblox-optimizer

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  manifest.xml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: audit.yml  release.yml
src/: benchmark.rs  fastflags.rs  main.rs  memory.rs  network.rs  privilege.rs  process.rs  timer.rs  ui.rs
