[package]
name = "roblox-optimizer"
version = "2.0.0"
edition = "2021"
authors = ["sashimi_Dev"]
description = "Optimizer for Roblox — Open Source"
license = "MIT"
repository = "https://github.com/nelakunch-sketch/roblox-optimizer"
keywords = ["windows", "optimization", "roblox", "winapi", "performance"]

[[bin]]
name = "RobloxOptimizer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
colored = "2.1"
ctrlc = "3.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.52"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
]

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
